# shielded-actions

./: .gitignore  README.md  shielded-actions-spec.md
.github/workflows/: deploy-frontend.yml
shielded-actions/: .env.example  .gitignore  README.md  foundry.toml
shielded-actions/backend/: .env.example  Dockerfile  fly.toml  mix.exs  render.yaml
shielded-actions/backend/config/: config.exs  dev.exs  prod.exs  runtime.exs
shielded-actions/backend/lib/backend/: application.ex  proof_service.ex  resource_store.ex  router.ex
shielded-actions/frontend/: index.html  package-lock.json  package.json  vite.config.ts
shielded-actions/frontend/src/: App.tsx  api.ts  contracts.ts  main.tsx  wagmi.ts
shielded-actions/prover/: .env.example  Cargo.toml  Dockerfile  README.md
shielded-actions/prover/circuits/forwarder_logic/methods/guest/: Cargo.toml
shielded-actions/prover/circuits/forwarder_logic/methods/guest/src/: main.rs
shielded-actions/prover/circuits/forwarder_logic/witness/: Cargo.toml
shielded-actions/prover/circuits/forwarder_logic/witness/src/: lib.rs
shielded-actions/prover/src/: local_prove.rs  main.rs  prover.rs  shield_logic.rs
shielded-actions/script/: DeployShieldedActions.s.sol
shielded-actions/src/forwarders/: ERC20Forwarder.sol  UniswapV3Forwarder.sol
shielded-actions/test/: ERC20Forwarder.t.sol  UniswapV3Forwarder.t.sol
