[package]
name = "shielded-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Boundless/Bonsai SDK
bonsai-sdk = "1.4"
risc0-zkvm = "1.4"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Utilities
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
