[package]
name = "shielded-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shielded-prover"
path = "src/main.rs"

[[bin]]
name = "local-prove"
path = "src/local_prove.rs"

[dependencies]
# Anoma Resource Machine with RISC Zero local proving
arm = { git = "https://github.com/anoma/arm-risc0.git", tag = "v0.13.0", package = "arm", features = ["prove", "aggregation"] }
arm_tests = { git = "https://github.com/anoma/arm-risc0.git", tag = "v0.13.0", package = "arm-test-app" }

# Forwarder logic witness for shield/unshield with external_payload
forwarder-logic-witness = { path = "circuits/forwarder_logic/witness", features = ["prove"] }

# risc0-zkvm for Digest type and verification
risc0-zkvm = { version = "=3.0.3", features = ["std"] }

# EVM Protocol Adapter bindings
evm_protocol_adapter_bindings = { git = "https://github.com/anoma/evm-protocol-adapter.git", tag = "bindings/v1.0.0-rc.9" }

# Ethereum types and ABI encoding
alloy = { version = "1.3", features = ["full"] }

# Web framework (for the server binary)
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
hex = "0.4"
sha2 = "0.10"
anyhow = "1"
rand = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
bonsai-sdk = "1.4"

[profile.release]
opt-level = 3
