[package]
name = "forwarder-logic-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=3.0.3", features = ["std", "unstable"] }
arm = { git = "https://github.com/anoma/arm-risc0.git", tag = "v0.13.0", package = "arm", default-features = false }
serde = { version = "1", features = ["derive"] }

[patch.crates-io]
# RISC Zero patches for SHA-256 accelerator support
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
